crates/escalier_parser/src/snapshots/escalier_parser__tests__types-9.snap
---
source: crates/escalier_parser/src/lib.rs
expression: "parse(\"let mut_arr: mut string[] = [];\")"
---
Ok(
    Program {
        body: [
            VarDecl {
                loc: SourceLocation {
                    start: Position {
                        line: 0,
                        column: 0,
                    },
                    end: Position {
                        line: 0,
                        column: 31,
                    },
                },
                span: 0..31,
                pattern: Pattern {
                    loc: SourceLocation {
                        start: Position {
                            line: 0,
                            column: 4,
                        },
                        end: Position {
                            line: 0,
                            column: 11,
                        },
                    },
                    span: 4..11,
                    kind: Ident(
                        BindingIdent {
                            name: "mut_arr",
                            mutable: false,
                            span: 4..11,
                            loc: SourceLocation {
                                start: Position {
                                    line: 0,
                                    column: 4,
                                },
                                end: Position {
                                    line: 0,
                                    column: 11,
                                },
                            },
                        },
                    ),
                    inferred_type: None,
                },
                type_ann: Some(
                    TypeAnn {
                        kind: Mutable(
                            MutableType {
                                type_ann: TypeAnn {
                                    kind: Array(
                                        ArrayType {
                                            elem_type: TypeAnn {
                                                kind: Keyword(
                                                    KeywordType {
                                                        keyword: String,
                                                    },
                                                ),
                                                loc: SourceLocation {
                                                    start: Position {
                                                        line: 0,
                                                        column: 17,
                                                    },
                                                    end: Position {
                                                        line: 0,
                                                        column: 23,
                                                    },
                                                },
                                                span: 17..23,
                                                inferred_type: None,
                                            },
                                        },
                                    ),
                                    loc: SourceLocation {
                                        start: Position {
                                            line: 0,
                                            column: 17,
                                        },
                                        end: Position {
                                            line: 0,
                                            column: 25,
                                        },
                                    },
                                    span: 17..25,
                                    inferred_type: None,
                                },
                            },
                        ),
                        loc: SourceLocation {
                            start: Position {
                                line: 0,
                                column: 13,
                            },
                            end: Position {
                                line: 0,
                                column: 25,
                            },
                        },
                        span: 13..25,
                        inferred_type: None,
                    },
                ),
                init: Some(
                    Expr {
                        loc: SourceLocation {
                            start: Position {
                                line: 0,
                                column: 28,
                            },
                            end: Position {
                                line: 0,
                                column: 30,
                            },
                        },
                        span: 28..30,
                        kind: Tuple(
                            Tuple {
                                elems: [],
                            },
                        ),
                        inferred_type: None,
                    },
                ),
                declare: false,
            },
        ],
    },
)
